day04/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-hsvc
  namespace: db-ns
  labels:
    app: db
    name: db-hsvc
spec:
  ClusterIP: None
  selector:
    app: db
    name: db-po
  ports:
  - port: 3306
    targetPort: 3306

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-sts
  namespace: db-ns
  labels:
    app: db
    name: db-sts
spec:
  selector:
    matchLabels:
      app: db
      name: db-po
  serviceName: db-hsvc
  replicas: 2
  template:
    metadata:
      labels:
        app: db
        name: db-po
    spec:
      containers:
      - name: mysql-container
        image: mysql:8.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data-vol
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: data-vol
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: do-block-storage
      resources:
        requests:
          storage: 1Gi
